--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "private": true,
   "engines": {
     "node": "0.12.15"
-  },"scripts": {
+  },
+  "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
+    "bookshelf": "^0.10.2",
     "cookie-parser": "~1.4.3",
+    "cron": "^1.1.0",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "express": "~4.13.4",
     "express-session": "^1.14.1",
     "hbs": "~4.0.0",
+    "knex": "^0.12.2",
+    "lodash": "^4.16.3",
     "morgan": "~1.7.0",
+    "mysql": "^2.11.1",
     "passport": "^0.3.2",
     "passport-twitter": "^1.0.4",
     "serve-favicon": "~2.3.0",
