--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hbs": "~4.0.0",
     "knex": "^0.12.2",
     "lodash": "^4.16.3",
+    "moment": "^2.15.1",
     "morgan": "~1.7.0",
     "mysql": "^2.11.1",
     "passport": "^0.3.2",
